samples/_failures_safe/1761490268_fb3b71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4087e418.c: In function ‘main’:
./samples/SAFE/__tmp_4087e418.c:136:12: error: missing terminating " character
  136 |     printf("Press Ctrl+D
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4087e418.c:136:5: error: expected expression at end of input
  136 |     printf("Press Ctrl+D
      |     ^~~~~~
./samples/SAFE/__tmp_4087e418.c:136:5: error: expected declaration or statement at end of input
